# american-football

./: .flake8  README.md  pyproject.toml  requirements.txt
src/american_football_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/football/engine/: engine.py  fac.py  game_state.py  play_call.py  play_mapping.py  tokens.py
src/football/playbooks/: defense_card.py  defense_cards_default.py  offense_card.py  offense_cards_default.py
src/football/ui/: app.py  app.tcss  theme.py
src/football/ui/cli/: main.py
src/football/ui/widgets/: current_drive.py  down_distance.py  field_view.py  play_log.py  playcall_panel.py  scoreboard.py
src/football/ui/widgets/playbook/: defense_playbook_view.py  offense_playbook_view.py
